...
            ),
          Expanded(
            child: SafeArea(
              top: false,
              bottom: false,
              child: CustomScrollView(
                key: const ValueKey('home_scroll_view'),
                slivers: [
                  SliverToBoxAdapter(
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        SectionTitle(
                          key: const ValueKey('categories_section_title'),
                          title: l10n.categoriesTitle,
                        ),
                        const SizedBox(height: 12),
                      ],
                    ),
                  ),
...
